--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+; This secret is meant to be exposed. It is on the free tier and is set to expire. I will soon retire this api key and hide the new one.
 VITE_OPEN_WEATHER_API_KEY="723a28a99b10aafa1e25f055e0906b1e"
